Bug 181919 - All day events size is not resized after deleting one
Summary: All day events size is not resized after deleting one
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 143496 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-25 23:21 UTC by Albert Astals Cid
Modified: 2009-02-05 04:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2009-01-25 23:21:15 UTC
Version:           4.2 rc1 (using 4.1.96 (KDE 4.1.96 (KDE 4.2 RC1)), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-9-generic

How to reproduce:
 * Add a all day event
 * It gets the whole upper part for him
 * Add another all day event
 * Both all day events share 50% of the upper part
 * Remove one of the two all day events
 * The other event does not "resize" to using the 100% of upper part
Comment 1 Sergio Martins 2009-01-28 23:22:18 UTC
This is true also for time associated events.
Comment 2 Sergio Martins 2009-02-04 19:33:20 UTC
SVN commit 921301 by smartins:

Fix typo in addConflictItem() (missing !).
When removing an item, decrement the number of sub cells in order to placeSubCells reuse the space.

BUG: 181919


 M  +4 -0      koagenda.cpp  
 M  +1 -1      koagendaitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=921301
Comment 3 Sergio Martins 2009-02-05 04:51:27 UTC
*** Bug 143496 has been marked as a duplicate of this bug. ***