Fix typo in addConflictItem() (missing !). When removing an item, decrement the number of sub cells in order to placeSubCells reuse the space.

BUG: 181919

svn path=/trunk/KDE/kdepim/; revision=921301